多角色切换（目前支持三位角色）、语音TTS、智能分句

--- a/anime-battle-demo/.env
+++ b/anime-battle-demo/.env
@@ -10,3 +10,7 @@ VITE_AI_MODEL=google/gemini-3-flash-preview
 # 0.2 = 冷静、精确
 # 0.8 = 更有创意、更像二次元角色
 VITE_AI_TEMPERATURE=0.7
+
+    # Fish Audio 配置
+    VITE_FISH_AUDIO_API_KEY=d98ed8378fe74eac9c996f59fb117f9d
+    VITE_FISH_AUDIO_REFERENCE_ID=a1ae30991487475ababd708ea7a000df
